correct focus background colour of CMS search box, remove extraneous whitespace

--- a/cms/src/main/resources/skin/document-editor.css
+++ b/cms/src/main/resources/skin/document-editor.css
@@ -144,9 +144,15 @@
     box-shadow: inset 0 1px 3px rgba(0,0,0,0.2);
     float: right;
     height: 42px;
-    padding: 0 49px 0 1.5em;
+    padding: 0 49px 0 0;
+    text-indent: 1.5em;
     width: 100%;
     -webkit-appearance: none;
+}
+
+.section-search-input input:active,
+.section-search-input input:focus {
+    background-color: #e5f0f8;
 }
 
 .section-search-input > a {
